google link verify

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-
+    <meta name="google-site-verification" content="7Mqu_T2z8IJn1DZg-xUUH8YmiSFBxHsL77EZ9Lq4_I0" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
